# zeebot

./: .editorconfig  .gitignore  Cargo.toml
.github/workflows/: ci.yml
src/: main.rs
src/commands/: ping.rs
