[package]
name = "zeebot"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
serenity = { version = "0.12.4", default-features = false, features = [
  "client",
  "gateway",
  "rustls_backend",
  "model",
] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
